--- a/pipui/templates/index.html
+++ b/pipui/templates/index.html
@@ -4,199 +4,201 @@
     <meta charset="UTF-8">
     <title>Python 包管理工具</title>
 
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #121212;
-        color: #e0e0e0;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-    }
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
 
-    .header, .footer {
-        background-color: #1e1e1e;
-        padding: 15px;
-        text-align: center;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-    }
+        .header, .footer {
+            background-color: #1e1e1e;
+            padding: 15px;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+        }
 
-    .main {
-        display: flex;
-        flex: 1;
-        margin: 10px;
-    }
+        .main {
+            display: flex;
+            flex: 1;
+            margin: 10px;
+        }
 
-    .sidebar-right, .sidebar-left {
-        flex: 1;
-        background-color: rgba(34, 34, 34, 0);
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-        height: 70vh;
-        overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-    }
+        .sidebar-right, .sidebar-left {
+            flex: 1; /* 让边栏在水平方向上均分空间 */
+            background-color: rgba(34, 34, 34, 0);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            height: 100%; /* 改为 100% 以填充剩余空间 */
+        }
 
-    .content {
-        flex: 3;
-        padding: 20px;
-        background-color: #2c2c2c;
-        border-radius: 8px;
-        margin: 0 10px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-    }
 
-    h1, h2, h3 {
-        color: #ffffff;
-    }
+        .content {
+            flex: 3;
+            padding: 20px;
+            background-color: #2c2c2c;
+            border-radius: 8px;
+            margin: 0 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+        }
 
-    input {
-        width: 100%;
-        padding: 4px 8px;
-        border: 1px solid #444;
-        border-radius: 5px;
-        background-color: #333;
-        color: #f5f5f5;
-        box-sizing: border-box;
-        height: 30px;
-        line-height: 18px;
-    }
+        h1, h2, h3 {
+            color: #ffffff;
+        }
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
-    }
+        input {
+            width: 100%;
+            padding: 4px 8px;
+            border: 1px solid #444;
+            border-radius: 5px;
+            background-color: #333;
+            color: #f5f5f5;
+            box-sizing: border-box;
+            height: 30px;
+            line-height: 18px;
+        }
 
-    th, td {
-        padding: 10px;
-        text-align: center;
-        border-bottom: 1px solid #444;
-    }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
 
-    th {
-        background-color: #444;
-        cursor: pointer;
-    }
+        th, td {
+            padding: 10px;
+            text-align: center;
+            border-bottom: 1px solid #444;
+        }
 
-    tr:hover {
-        background-color: #555;
-    }
+        th {
+            background-color: #444;
+            cursor: pointer;
+        }
 
-    button {
-        background-color: #007bff;
-        color: #ffffff;
-        border: none;
-        padding: 4px 8px;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 1em;
-        height: 30px;
-        line-height: 18px;
-    }
+        tr:hover {
+            background-color: #555;
+        }
 
-    button:hover {
-        background-color: #0056b3;
-    }
+        button {
+            background-color: #007bff;
+            color: #ffffff;
+            border: none;
+            padding: 4px 8px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 1em;
+            height: 30px;
+            line-height: 18px;
+        }
 
-    .search-container {
-        display: flex;
-        align-items: center;
-        margin-bottom: 20px;
-    }
+        button:hover {
+            background-color: #0056b3;
+        }
 
-    .search-container input {
-        width: 80%;
-        padding: 8px 12px;
-    }
+        .search-container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
 
-    .search-container button {
-        margin-left: 10px;
-    }
+        .search-container input {
+            width: 80%;
+            padding: 8px 12px;
+        }
 
-    #interpreter-info {
-        white-space: normal;
-        word-wrap: break-word;
-        word-break: break-word;
-    }
+        .search-container button {
+            margin-left: 10px;
+        }
 
-    /* 美化下拉框 */
-    select {
-        width: 100%;
-        padding: 4px 8px;
-        border: 1px solid #444;
-        border-radius: 6px;
-        background-color: #333;
-        color: #f5f5f5;
-        box-sizing: border-box;
-        height: 30px;
-        margin-bottom: 10px;
-    }
+        #interpreter-info {
+            white-space: normal;
+            word-wrap: break-word;
+            word-break: break-word;
+        }
 
-    /* 美化文件选择框 */
-    #file-input {
-        padding: 6px;
-        border: 1px solid #444;
-        border-radius: 6px;
-        background-color: #333;
-        color: #f5f5f5;
-        box-sizing: border-box;
-        height: 44px;
-        cursor: pointer;
-        margin-bottom: 15px;
-        display: inline-block;
-        width: calc(100% - 16px); /* 留出一些空间给按钮 */
-    }
+        /* 美化下拉框 */
+        select {
+            width: 100%;
+            padding: 4px 8px;
+            border: 1px solid #444;
+            border-radius: 6px;
+            background-color: #333;
+            color: #f5f5f5;
+            box-sizing: border-box;
+            height: 30px;
+            margin-bottom: 10px;
+        }
 
-    #file-input::file-selector-button {
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        padding: 5px 12px;
-        border-radius: 6px;
-        font-size: 1em;
-        cursor: pointer;
-        height: 30px; /* 按钮的高度统一设置 */
-    }
+        /* 美化文件选择框 */
+        #file-input {
+            padding: 6px;
+            border: 1px solid #444;
+            border-radius: 6px;
+            background-color: #333;
+            color: #f5f5f5;
+            box-sizing: border-box;
+            height: 44px;
+            cursor: pointer;
+            margin-bottom: 15px;
+            display: inline-block;
+            width: calc(100% - 16px); /* 留出一些空间给按钮 */
+        }
 
-    #file-input::file-selector-button:hover {
-        background-color: #0056b3;
-    }
+        #file-input::file-selector-button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 5px 12px;
+            border-radius: 6px;
+            font-size: 1em;
+            cursor: pointer;
+            height: 30px; /* 按钮的高度统一设置 */
+        }
 
-    #install-input {
-        width: 100%;
-        padding: 4px 8px;
-        font-size: 1em;
-        border: 1px solid #444;
-        border-radius: 6px;
-        background-color: #333;
-        color: #f5f5f5;
-        box-sizing: border-box;
-        margin-bottom: 15px;
-        resize: vertical;
-        height: auto;
-        min-height: 120px;
-        max-height: 500px;
-    }
+        #file-input::file-selector-button:hover {
+            background-color: #0056b3;
+        }
 
-    #install-input::placeholder {
-        color: #aaa;
-    }
+        #install-input {
+            width: 100%;
+            padding: 4px 8px;
+            font-size: 1em;
+            border: 1px solid #444;
+            border-radius: 6px;
+            background-color: #333;
+            color: #f5f5f5;
+            box-sizing: border-box;
+            margin-bottom: 15px;
+            resize: vertical; /* 允许用户垂直调整大小 */
+            min-height: 200px; /* 设置最小高度，确保它至少有一定的高度 */
+            max-height: 100%; /* 最大高度设置为100%，可以填充父容器 */
+            height: auto; /* 自动调整高度 */
+        }
 
-    .install-controls {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
 
-    .install-controls button {
-        margin-left: auto;
-    }
+        #install-input::placeholder {
+            color: #aaa;
+        }
 
-</style>
+        .install-controls {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+        }
+
+        .install-controls button {
+            margin-left: auto;
+        }
+
+    </style>
 
 
 </head>
@@ -242,7 +244,7 @@
     </div>
 
     <div class="sidebar-right">
-        <h2>基本信息</h2>
+        <h2>当前解释器</h2>
         <div id="interpreter-info"></div>
         <h2>在线安装</h2>
         <div class="install-controls">
@@ -405,22 +407,6 @@
     }
 
 
-    document.addEventListener("DOMContentLoaded", function () {
-        fetch('/interpreter-info')
-            .then(response => response.json())
-            .then(data => {
-                const infoDiv = document.getElementById('interpreter-info');
-//                 infoDiv.innerHTML = `
-// <!--                <strong>当前解释器信息:</strong><br>-->
-//                 <span>Python Version: ${data.version}</span><br>
-//                 <span>Python Path: ${data.path}</span>
-//             `;
-            })
-            .catch(error => {
-                console.error('获取解释器信息失败:', error);
-            });
-    });
-
     // 获取并发送安装数据的函数
     function installPackages() {
         const packageDetails = document.getElementById('install-input').value; // 获取输入框内容
@@ -479,8 +465,8 @@
                 const infoDiv = document.getElementById('interpreter-info');
                 // 动态填充 Python 版本和路径
                 infoDiv.innerHTML = `
-                <span>Python 版本: <strong>${data.version}</strong></span><br>
-                <span>Python 路径: <strong>${data.path}</strong></span>
+                <span>版本: ${data.version}</span><br>
+                <span>路径: ${data.path}</span>
             `;
             })
             .catch(error => {
